--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&amp;display=swap" rel="stylesheet">
     <title>Home</title>
   </head>
-  <body>
+  <body><img id="bg" src="bg1.jpg" alt="background">
     <div class="container">
       <h2 class="title">Welcome <b id="username"></b></h2>
       <div class="card glass">
