--- a/html/index.html
+++ b/html/index.html
@@ -28,5 +28,7 @@
       </div>
     </div>
   </body>
+  <script src="utils.js"></script>
+  <script src="commands.js"></script>
   <script src="scripts.js"></script>
 </html>
